control-service: refactor and comments
Signed-off-by: mrMoZ1 <mzhivkov@vmware.com>